# helloramp-img-analysis-pipeline

./: .gitignore  classify.py  pyproject.toml  visualize.py
.ipynb_checkpoints/: Self_Supervised_Feature_Extractor-checkpoint.ipynb  hr_classification_pytorch-checkpoint.ipynb  project-6-at-2025-11-18-10-24-3493761b-checkpoint.json
lightning_logs/lightning_logs/version_0/: hparams.yaml  metrics.csv
notebooks/: Self_Supervised_Feature_Extractor.ipynb  hr-classification-model-pipeline.ipynb
